--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,6 +2,9 @@
     background-color: #FEEAE9;
 
 }
+.panda-carousel{
+  border-radius: 15px;
+}
 .panda-btn-buy-now{
     background-image: linear-gradient(180deg, #FF589B -0.01%, #FF136F 99.99%);;
     color: white;
